# robot-monitoring-station

./: README.md
hmi-web-app/: app_controls.js  index.html  main.js  ol-functions.js  ol-parameters.js  ol-styles.js  package.json  ros-control.js  style.css  styles_animations.css  styles_loader.css  styles_main.css  vite.config.js
hmi-web-app/css/: style.css  styles_animations.css  styles_main.css
ros-ws/devel/: .catkin
ros-ws/devel/lib/gui_RR/: publicador.py
ros-ws/devel/lib/pkgconfig/: gui_RR.pc  my_camera.pc  pubsub.pc
ros-ws/devel/lib/pubsub/: rambler.py
ros-ws/src/pubsub/: CMakeLists.txt  package.xml
ros2-ws/install/: local_setup.sh  setup.sh
ros2-ws/install/monitoring_station_tfm/share/monitoring_station_tfm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2-ws/log/: latest_build
ros2-ws/src/camera_driver/: setup.py
ros2-ws/src/monitoring_station_tfm/: setup.cfg  setup.py
ros2-ws/src/web_video_server/: CMakeLists.txt
start-bash-scripts/: base.sh  camera-driver.sh  camera-dron.sh  camera-launch.sh  camera-rj8-front.sh  camera-rj8-movil.sh  camera-rj8-rear.sh  demo.sh  ejercicio1.sh  ejercicio2.sh  ejercicio3.sh  hmi-launch.sh  load-ros1.sh  load-ros2.sh  n-cuadriga.sh  n-dron.sh  n-rambler.sh  n-roverj8.sh  n-tPixel.sh  n-tX2.sh  n-tX3.sh  n-tX4.sh  nodos-suspub.sh  play-unit01.sh  play-unit02.sh  play-unit03.sh  pub01.sh  pub02.sh  pub03.sh  ros1_bridge.sh  rosbag-records-launch.sh  rosbridge_server.sh  roscore.sh  start.sh  web-video-server.sh  web-video-server.sh.save
(+81 files in other folders)
